--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,6 +7,16 @@
   min-height: 100vh;
 }
 
+.gradient-back {
+  background: rgb(181, 184, 162);
+  background: linear-gradient(
+    90deg,
+    rgba(181, 184, 162, 1) 0%,
+    rgba(173, 177, 150, 1) 35%,
+    rgba(134, 136, 111, 1) 100%
+  );
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
@@ -97,7 +107,7 @@
 
 .center::before,
 .center::after {
-  content: "";
+  content: '';
   left: 50%;
   position: absolute;
   filter: blur(45px);
@@ -199,31 +209,5 @@
       rgb(var(--background-end-rgb)) 40%
     );
     z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
   }
 }
